Using new svg injector and fixing spacing.

--- a/resources/assets/css/inner/new-build.less
+++ b/resources/assets/css/inner/new-build.less
@@ -848,14 +848,12 @@
   }
 
   .ssh-node-container {
-    min-width: 105px;
-    padding-right: 10px;
+    min-width: 110px;
     font-family: @monoFontFamilyV2
   }
 
   .ssh-node-command {
-    min-width: 285px;
-    padding-right: 10px;
+    min-width: 310px;
     font-family: @monoFontFamilyV2
   }
 
